--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,9 @@ en:
       new_question:   'New Question'
       questions_link: 'All Questions'
   questions:
+    question:
+      subscribe:   'Subscribe'
+      unsubscribe: 'Unsubscribe'
     index:
       edit_question:   'Edit Question'
       show_question:   'Show Question and Answers'
@@ -57,8 +60,15 @@ en:
     digest:
       subject: "Fresh questions"
 
+  subscriptions:
+    destroy:
+      subscribe:   'Subscribe'
+    create:
+      unsubscribe: 'Unsubscribe'
+
+
   time:
     formats:
-      day: '%d %b. %Y'
+      day:  '%d %b. %Y'
       time: '%H:%M'
 
